--- a/vars/main_my.yml
+++ b/vars/main_my.yml
@@ -61,6 +61,8 @@ patroni_etcd_hosts: []  # list of servers of an existing etcd cluster
 #  - { host: "192.168.171.1", port: "2379" }
 #  - { host: "192.168.171.2", port: "2379" }
 #  - { host: "192.168.171.3", port: "2379" }
+#  - { host: "192.168.171.4", port: "2379" }
+#  - { host: "192.168.171.5", port: "2379" }
 
 # more options you can specify in the roles/patroni/templates/patroni.yml.j2
 # https://patroni.readthedocs.io/en/latest/SETTINGS.html#etcd
@@ -188,7 +190,7 @@ postgresql_parameters:
   - { option: "default_statistics_target", value: "1000" }
   - { option: "seq_page_cost", value: "1" }
   - { option: "random_page_cost", value: "4" }  # "1.1" for SSD storage. Also, if your databases fits in shared_buffers
-  - { option: "effective_io_concurrency", value: "2" }  # "200" for SSD storage
+  - { option: "effective_io_concurrency", value: "1000" }  # "200" for SSD storage
   - { option: "synchronous_commit", value: "on" }  # or 'off' if you can you lose single transactions in case of a crash
   - { option: "autovacuum", value: "on" }  # never turn off the autovacuum!
   - { option: "autovacuum_max_workers", value: "5" }
