--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ readme_for_install.md
 add_IP_hba_2u.yml
 cluster_managment.md
 /vars/Copy of main.yml
-Readme_for_install.md
+.eadme_for_install.md
